--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,8 +30,6 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    env:
-      NODE_OPTIONS: "-r tsconfig-paths/register"
 
     steps:
       - name: Checkout Test Repository
@@ -66,11 +64,13 @@ jobs:
       - name: Install Dependencies
         working-directory: ./api-test-automation
         run: |
-          npm install
+          npm ci
           npx playwright install --with-deps
 
       - name: Build
         working-directory: ./api-test-automation
+        env:
+          NODE_OPTIONS: "-r tsconfig-paths/register"
         run: |
           npm run build
           echo "Checking compiled files:"
@@ -79,6 +79,8 @@ jobs:
 
       - name: Run API Tests
         working-directory: ./api-test-automation
+        env:
+          NODE_OPTIONS: "-r tsconfig-paths/register"
         run: npm run test
 
       - name: Verify Report Directory
