configuring package.conf

--- a/api-test-performance/.gatling/package.conf
+++ b/api-test-performance/.gatling/package.conf
@@ -1,2 +1,66 @@
-# See `example.package.conf` for a full deployment configuration file example
-# Learn more about Configuration as Code: https://docs.gatling.io/reference/execute/cloud/user/configuration-as-code
+gatling.enterprise.package {
+  name = "Pet Store Complete API Load Test Suite"
+  team = "Default team"
+  
+  default {
+    simulation {
+      locations = [
+        {
+          name: "Europe - Paris",
+          size: 3,
+          weight: 70
+        },
+        {
+          name: "US East - N. Virginia",
+          size: 2,
+          weight: 30
+        }
+      ]
+      timeWindow {
+        rampUp = 60    # One minute ramp-up
+        rampDown = 30  # 30 seconds ramp-down
+      }
+    }
+  }
+  
+  simulations = [
+    {
+      name = "Pet Management Test Suite"
+      simulation = "pet"
+      parameters {
+        environmentVariables {
+          PET_RAMP_DURATION = "60"
+          CREATE_PETS = "100"
+          READ_PETS = "200"
+        }
+      }
+    },
+    {
+      name = "Store Operations Test Suite"
+      simulation = "store"
+      parameters {
+        environmentVariables {
+          ORDER_RAMP_DURATION = "60"
+          CREATE_ORDERS = "150"
+          READ_ORDERS = "300"
+          DELETE_ORDERS = "50"
+          READ_INVENTORY = "200"
+        }
+      }
+    },
+    {
+      name = "User Management Test Suite"
+      simulation = "user"
+      parameters {
+        environmentVariables {
+          USER_RAMP_DURATION = "60"
+          CREATE_USERS = "80"
+          READ_USERS = "160"
+          UPDATE_USERS = "64"
+          DELETE_USERS = "40"
+          AUTH_USERS = "200"
+        }
+      }
+    }
+  ]
+}
