--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -137,6 +137,7 @@ jobs:
           fi
 
       # Step 9: Prepare the test reports for publication
+
       - name: Prepare Report Directory
         id: prepare_report
         run: |
@@ -179,6 +180,44 @@ jobs:
             <ul>
           EOF
 
+          # Function to determine simulation type from the simulation file content
+          get_simulation_type() {
+            local sim_dir="$1"
+            local simulation_log="$sim_dir/simulation.log"
+            
+            # First, try to extract the simulation name from the log file
+            local simulation_name=""
+            if [ -f "$simulation_log" ]; then
+              # Look for the simulation class name in the log
+              simulation_name=$(grep -o "pet\|store\|user" "$simulation_log" | head -n 1)
+            fi
+            
+            # Based on the simulation name, return the appropriate display name
+            case "$simulation_name" in
+              "pet")
+                echo "Pet Management Test Suite"
+                ;;
+              "store")
+                echo "Store Operations Test Suite"
+                ;;
+              "user")
+                echo "User Management Test Suite"
+                ;;
+              *)
+                # If we couldn't determine the type, check the original typescript files
+                if [ -f "api-test-performance/src/simulations/pet.gatling.ts" ] && grep -q "pet.gatling.ts" "$simulation_log"; then
+                  echo "Pet Management Test Suite"
+                elif [ -f "api-test-performance/src/simulations/store.gatling.ts" ] && grep -q "store.gatling.ts" "$simulation_log"; then
+                  echo "Store Operations Test Suite"
+                elif [ -f "api-test-performance/src/simulations/user.gatling.ts" ] && grep -q "user.gatling.ts" "$simulation_log"; then
+                  echo "User Management Test Suite"
+                else
+                  echo "Unknown Test Suite"
+                fi
+                ;;
+            esac
+          }
+
           # Process each simulation directory and add it to the index
           for sim in $SIMS; do
             SIM_NAME=$(basename "$sim")
@@ -188,21 +227,16 @@ jobs:
             
             # Extract and format timestamp for display
             TIMESTAMP=$(echo $SIM_NAME | grep -o "[0-9]\{14\}")
-            FORMATTED_TIME=$(date -d "${TIMESTAMP:0:8} ${TIMESTAMP:8:2}:${TIMESTAMP:10:2}:${TIMESTAMP:12:2}" "+%H:%M:%S")
+            FORMATTED_TIME=$(date -d "${TIMESTAMP:0:8} ${TIMESTAMP:8:2}:${TIMESTAMP:10:2}:${TIMESTAMP:12:2}" "+%Y-%m-%d %H:%M:%S")
 
-            # Determine simulation type from the simulation log
-            if grep -q "createPet\|findPetsByStatus" "$sim/simulation.log" 2>/dev/null; then
-              DISPLAY_NAME="Pet Management Test Suite"
-            elif grep -q "placeOrder\|getInventory" "$sim/simulation.log" 2>/dev/null; then
-              DISPLAY_NAME="Store Operations Test Suite"
-            elif grep -q "createUser\|loginUser" "$sim/simulation.log" 2>/dev/null; then
-              DISPLAY_NAME="User Management Test Suite"
-            else
-              DISPLAY_NAME="Unknown Test Suite"
-            fi
+            # Get the simulation type using our helper function
+            DISPLAY_NAME=$(get_simulation_type "$sim")
 
             # Add entry to index.html with clean name and timestamp
             echo "<li><a href='./${SIM_NAME}/index.html'>${DISPLAY_NAME}</a><span class='timestamp'>${FORMATTED_TIME}</span></li>" >> gh-pages/api-test-performance/index.html
+            
+            # Debug output
+            echo "Processed simulation: $DISPLAY_NAME at $FORMATTED_TIME"
           done
 
           # Close the HTML document
@@ -211,7 +245,6 @@ jobs:
           # Save the first simulation name for the report URL
           echo "simulation_name=${sim_names[0]}" >> "$GITHUB_OUTPUT"
           echo "All simulations processed successfully"
-
       # Step 10: Configure GitHub Pages for report publishing
       - name: Setup Pages
         uses: actions/configure-pages@v4
